# ARTES.4.0-NOMADIA

./: README.md
Audio/: Classificazione_tcn.py  ESP32.py  gopro.py  istruzioni.txt  main.py
Video/: PROCESSOR.py  main.py  requirements.txt  utils_filters.py
Video/utils/: displacement_functions.py  gpx_to_csv_with_velocity.py
data/: video.txt
data/gps/: intervallo_1.csv  intervallo_10.csv  intervallo_11.csv  intervallo_12.csv  intervallo_13.csv  intervallo_14.csv  intervallo_15.csv  intervallo_16.csv  intervallo_17.csv  intervallo_18.csv  intervallo_19.csv  intervallo_2.csv  intervallo_20.csv  intervallo_21.csv  intervallo_22.csv  intervallo_23.csv  intervallo_24.csv  intervallo_25.csv  intervallo_26.csv  intervallo_27.csv  intervallo_28.csv  intervallo_29.csv  intervallo_3.csv  intervallo_30.csv  intervallo_4.csv  intervallo_5.csv  intervallo_6.csv  intervallo_7.csv  intervallo_8.csv  intervallo_9.csv
data/tcn/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  12.txt  (+259 more)
results/: output_urban_result.csv
src/audio/firmware ESP32/source/main/: CMakeLists.txt  global.h
src/audio/firmware ESP32/source/main/Bios/: adc.h  cutmain.h  gpio.h  spi0.c  spi1.h  timer.c  uart0.c  utils.c
src/audio/firmware ESP32/source/main/Drivers/: ADS131M0x.h  driver_utils.c  sdcard.c  sdcard.h
src/audio/firmware ESP32/source/main/Drivers/wav_file/: WAVFileWriter.h
src/audio/firmware ESP32/source/main/Test/: usr_global.h  usr_main.h  usr_utils.c
src/audio/firmware ESP32/source/main/VirtualLcd/: virtuallcd.h
(+47 files in other folders)
